--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ repositories {
 
 dependencies {
     implementation 'com.google.auto.service:auto-service:1.0-rc3'
+    implementation 'com.squareup:javapoet:1.9.0'
 
     testImplementation 'junit:junit:4.12'
+    testImplementation 'com.google.guava:guava:21.0'
 }
 
