Adding methods for @GET annotation.
Major refactoring. Introduced a model for processing.

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ repositories {
 }
 
 dependencies {
+    api 'com.squareup.okhttp3:okhttp:3.9.0'
+
     implementation 'com.google.auto.service:auto-service:1.0-rc3'
     implementation 'com.squareup:javapoet:1.9.0'
 
