--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,6 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.google.guava:guava:21.0'
+    testImplementation 'org.mockito:mockito-core:2.10.0'
 }
 
