Typing the API.  Deserializing the response.

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 
     implementation 'com.google.auto.service:auto-service:1.0-rc3'
     implementation 'com.squareup:javapoet:1.9.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.google.guava:guava:21.0'
