--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,7 @@
-apply plugin: 'java-library'
-
-repositories {
-    jcenter()
-}
-
-dependencies {
-    api 'com.squareup.okhttp3:okhttp:3.9.0'
-
-    implementation 'com.google.auto.service:auto-service:1.0-rc3'
-    implementation 'com.squareup:javapoet:1.9.0'
-    implementation 'com.google.code.gson:gson:2.8.2'
-
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'com.google.guava:guava:21.0'
-    testImplementation 'org.mockito:mockito-core:2.10.0'
+allprojects {
+    repositories {
+        jcenter()
+        mavenLocal()
+    }
 }
 
